# AgentWorks-One

./: .gitignore  README.md  main.py  pyproject.toml
src/EmailAgent/: all_nodes.py  utils.py
src/agent/: calculator.py
src/notebooks/: langgraph-overview.ipynb  lite-llm.ipynb  pdf-merger.ipynb  quick-start.ipynb
src/simple_adk_agent/: agent.py
