[project]
name = "agentworks-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.0.4",
    "litellm>=1.80.11",
]
